--- a/service-dx.html
+++ b/service-dx.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>業務設計・DX推進 | 株式会社EXPAND</title>
-  <meta name="description" content="業務設計・DX推進サービスのご紹介。現場の業務を可視化し、ムダな作業の削減とDXツールの導入・定着を支援します。">
+  <meta name="description" content="業務設計・DX推進サービスのご紹介。業務フローの可視化・標準化、ツール連携・自動化、DXロードマップの設計・定着まで、現場に根づく仕組みづくりを伴走支援します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="業務設計・DX推進 | 株式会社EXPAND">
-  <meta property="og:description" content="業務の見える化とDX推進で、生産性向上と属人化の解消をサポートします。">
+  <meta property="og:description" content="業務フローの可視化と標準化、ツール連携・自動化で、“人に依存しない業務体制”づくりをサポートします。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -16,7 +16,7 @@
   <header class="site-header">
     <a class="brand" href="index.html">
       <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-     <!--
+      <!--
       <span class="brand-text">EXPAND</span>
       -->
     </a>
@@ -27,224 +27,256 @@
     </nav>
   </header>
 
-<div id="main">
-  <div class="breadcrumb">
-    <a href="/">TOP</a> &gt; 業務設計・DX推進
-  </div>
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>業務設計・DX推進</h1>
+        <p class="lead">
+          属人化した業務とバラバラなツールを整理し、<br>
+          「人に依存する運用」から「仕組みで回る業務」への転換を支援します。
+        </p>
+      </div>
+    </section>
 
-  <section class="service-header">
-    <h1>業務設計・DX推進</h1>
-    <p>
-      日々の業務が人に依存していて属人化している。<br>
-      ツールは入れたのに、現場でほとんど使われていない。<br>
-      そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
-    </p>
-  </section>
+    <!-- 課題セクション -->
+    <section class="section">
+      <h2>こんな課題はありませんか？</h2>
+      <ul>
+        <li>業務フローが整理されておらず、担当者ごとにやり方がバラバラになっている</li>
+        <li>Excel・紙・メール・チャットなど、情報があちこちに散在している</li>
+        <li>ツールやシステムを導入したものの、現場で十分に使われていない</li>
+        <li>マニュアルが形骸化しており、実際の業務と合っていない</li>
+        <li>DXを進めたいが、「どこから・何から手をつけるべきか」が決めきれない</li>
+      </ul>
+    </section>
 
+    <section class="compare">
+      <h2>導入前と導入後のイメージ</h2>
 
-  <!-- ============================== -->
-  <!-- 課題セクション -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>こんな課題はありませんか？</h2>
+      <div class="compare-inner">
 
-    <ul class="service-list">
-      <li>業務フローが整理されておらず、人によってやり方がバラバラ</li>
-      <li>Excel・紙・チャットなど、情報があちこちに散らばっている</li>
-      <li>RPAやSaaSを導入したものの、現場で使いこなせていない</li>
-      <li>マニュアルはあるが、現場の実態と合っておらず形骸化している</li>
-      <li>DX推進担当はいるが、どこから手をつけるべきかわからない</li>
-    </ul>
-  </section>
+        <!-- Before -->
+        <div class="compare-block compare-before">
+          <div class="compare-label">Before（導入前のよくある状態）</div>
+          <ul>
+            <li>
+              <strong>業務が人に依存・属人化</strong><br>
+              特定の人のやり方に依存しており、その人がいないと業務が止まってしまう。
+            </li>
+            <li>
+              <strong>全体像が分からない</strong><br>
+              部署ごと・人ごとにフローが異なり、「誰が・何を・どこまでやるのか」が曖昧。
+            </li>
+            <li>
+              <strong>ツールがバラバラ</strong><br>
+              Excel・紙・メール・チャット・社内システムなどが混在し、二重入力や探す手間が多い。
+            </li>
+            <li>
+              <strong>DXが“掛け声”で止まる</strong><br>
+              ツール導入だけで終わり、現場での運用や改善サイクルが回っていない。
+            </li>
+          </ul>
+        </div>
 
+        <!-- After -->
+        <div class="compare-block compare-after">
+          <div class="compare-label after">After（EXPAND支援後のイメージ）</div>
+          <ul>
+            <li>
+              <strong>全体業務フローが一枚で可視化</strong><br>
+              部門をまたいだ業務の流れが整理され、どこがボトルネックか一目で分かる。
+            </li>
+            <li>
+              <strong>標準プロセスで誰でも同じ品質に</strong><br>
+              担当者ごとの「暗黙知」が言語化され、マニュアルとして標準化される。
+            </li>
+            <li>
+              <strong>ツール連携・自動化でムダを削減</strong><br>
+              手作業や二重入力を減らし、「人が判断する仕事」に集中できるようになる。
+            </li>
+            <li>
+              <strong>DXが続いていく“仕組み”になる</strong><br>
+              ロードマップと推進体制が整い、改善が一度きりで終わらない。
+            </li>
+          </ul>
+        </div>
 
-  <!-- ============================== -->
-  <!-- Before / After -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>導入前と導入後のイメージ</h2>
+      </div>
+    </section>
 
-    <div class="before-after">
-      <div class="before">
-        <h3>Before（よくある状態）</h3>
-        <ul>
-          <li>業務が人に依存・属人化している</li>
-          <li>業務フローが見えず、部門ごとにバラバラ</li>
-          <li>情報がExcel・紙・メール・チャットに散在</li>
-          <li>ツールを入れても定着していない</li>
-        </ul>
+    <section class="process-flow">
+      <h2>ご支援の流れ</h2>
+
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-number">STEP 1</div>
+          <h3>現状ヒアリング・課題整理</h3>
+          <p>
+            経営層・現場の両方からヒアリングを行い、<br>
+            属人化やムダ、手戻りが発生しているポイントを整理します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 2</div>
+          <h3>業務可視化（AS-IS）</h3>
+          <p>
+            業務フロー図・担当者マップ・利用ツール一覧を作成し、<br>
+            現在の業務の流れを一枚の絵として見える化します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 3</div>
+          <h3>改善方針・TO-BE設計</h3>
+          <p>
+            やめる業務・減らす業務・自動化する業務を定義し、<br>
+            目指すべき業務プロセス（TO-BE）とDX方針を設計します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 4</div>
+          <h3>優先プロジェクトの実行</h3>
+          <p>
+            インパクトと実現性の高いテーマから着手し、<br>
+            プロセス改善・ツール連携・自動化など具体施策を進めます。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 5</div>
+          <h3>定着・内製化支援</h3>
+          <p>
+            運用ルール・標準マニュアル・教育コンテンツを整備し、<br>
+            現場に根づいた「継続的に改善できる状態」まで伴走します。
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- 解決策セクション -->
+    <section class="section">
+      <h2>EXPAND が提供すること</h2>
+
+      <h3>1. 全体業務フロー図の作成・可視化</h3>
+      <p>
+        部門ごとに分断されていた業務を一枚のフロー図に整理し、<br>
+        「誰が・どのタイミングで・何をしているのか」を把握できる状態をつくります。
+      </p>
+
+      <h3>2. 標準業務プロセス設計とマニュアル化</h3>
+      <p>
+        担当者ごとのやり方に依存している業務を洗い出し、<br>
+        ステップごとに標準化した業務プロセスとマニュアルを設計します。
+      </p>
+
+      <h3>3. ツール棚卸し・連携設計・自動化</h3>
+      <p>
+        現在利用しているツール（SaaS・社内システム・RPAなど）を棚卸しし、<br>
+        統合・連携・自動化の方針を整理。「手作業を減らせるポイント」を設計します。
+      </p>
+
+      <h3>4. DXロードマップ・推進体制の構築</h3>
+      <p>
+        短期～中期の改善テーマを整理し、DXロードマップを策定。<br>
+        社内の推進メンバーと連携し、「自社で改善を続けていける体制づくり」を支援します。
+      </p>
+    </section>
+
+    <section class="crm-layout">
+      <h2>業務設計・DX推進後のイメージ</h2>
+
+      <div class="crm-grid">
+        <div class="crm-card">
+          <h3>全体業務フロー図</h3>
+          <p>
+            部門をまたいだ業務の流れが一枚の図にまとまり、<br>
+            どこで案件やタスクが滞りやすいかがひと目で分かります。
+          </p>
+          <ul class="crm-ui">
+            <li class="bar"></li>
+            <li class="bar short"></li>
+            <li class="bar"></li>
+          </ul>
+        </div>
+
+        <div class="crm-card">
+          <h3>標準業務マニュアル</h3>
+          <p>
+            「ベテランの頭の中」にあったやり方が、<br>
+            ステップ別の手順書やチェックリストとして共有されます。
+          </p>
+          <ul class="crm-ui columns">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="crm-card">
+          <h3>ツール連携・自動化の基盤</h3>
+          <p>
+            業務フローとツールの役割分担が整理され、<br>
+            手入力や二重登録を減らすための“土台”が整います。
+          </p>
+          <ul class="crm-ui">
+            <li class="line"></li>
+            <li class="line"></li>
+            <li class="line"></li>
+          </ul>
+        </div>
       </div>
 
-      <div class="arrow">→</div>
+      <p class="crm-note">
+        ※ 実際の設計内容は御社の業種・規模・既存システムに合わせて個別にご提案します。
+      </p>
+    </section>
 
-      <div class="after">
-        <h3>After（支援後の状態）</h3>
-        <ul>
-          <li>全体業務フローが一枚で可視化</li>
-          <li>標準業務プロセス・マニュアルが整備</li>
-          <li>ツール連携・自動化ポイントを設計</li>
-          <li>DXロードマップに沿った継続改善</li>
-        </ul>
-      </div>
-    </div>
-  </section>
+    <!-- 導入ステップ -->
+    <section class="section">
+      <h2>導入ステップ</h2>
+      <ol>
+        <li>現状ヒアリング（課題・体制・ツール環境の把握）</li>
+        <li>業務フロー図・担当者マップ・利用ツール一覧の作成</li>
+        <li>改善方針・DXロードマップの策定</li>
+        <li>プロセス改善・自動化・ツール連携の実行</li>
+        <li>ルール整備・教育・マニュアル作成</li>
+        <li>振り返りと継続改善のサイクル構築</li>
+      </ol>
+    </section>
 
+    <!-- 効果セクション -->
+    <section class="section">
+      <h2>導入後に期待できること</h2>
+      <ul>
+        <li>業務全体の流れが可視化され、「どこにムダがあるか」が明確になる</li>
+        <li>属人化が解消され、担当者が変わっても業務が止まりにくくなる</li>
+        <li>手作業・二重入力が減り、現場の負荷を下げながら生産性が向上する</li>
+        <li>導入済みのツールが業務フローと結びつき、「入れただけ」で終わらなくなる</li>
+        <li>DX推進が“一度きりのプロジェクト”ではなく、継続的な改善の仕組みになる</li>
+      </ul>
+    </section>
 
-  <!-- ============================== -->
-  <!-- ご支援の流れ -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>ご支援の流れ</h2>
+    <nav class="service-nav">
+      <a href="service-crm.html">営業支援・CRM / MA構築</a>
+      <a href="service-dx.html" class="active">業務設計・DX推進</a>
+      <a href="service-education.html">教育・人材育成プログラム</a>
+      <a href="service-web.html">Web制作・マーケティング支援</a>
+    </nav>
 
-    <div class="steps">
+    <!-- CTA -->
+    <section class="cta">
+      <p>まずは現在の業務フローやDXの状況について、お気軽にご相談ください。</p>
+      <a href="contact.html" class="btn">無料相談を申し込む</a>
+    </section>
+  </main>
 
-      <div class="step-item">
-        <h3>STEP 1<br>現状ヒアリング・課題整理</h3>
-        <p>経営層・現場の両方から状況を確認し、属人化や手戻りの原因を整理します。</p>
-      </div>
-
-      <div class="step-item">
-        <h3>STEP 2<br>業務可視化（AS-IS）</h3>
-        <p>現状の業務フロー図・担当者マップ・利用ツール一覧を作成し、業務の流れを見える化します。</p>
-      </div>
-
-      <div class="step-item">
-        <h3>STEP 3<br>改善方針の設計（TO-BE）</h3>
-        <p>やめる業務・減らす業務・自動化する業務を整理し、理想の業務像を定義します。</p>
-      </div>
-
-      <div class="step-item">
-        <h3>STEP 4<br>優先プロジェクトの実行</h3>
-        <p>プロセス改善・ツール連携・自動化など、最も効果の高い領域から着手します。</p>
-      </div>
-
-      <div class="step-item">
-        <h3>STEP 5<br>定着・内製化支援</h3>
-        <p>運用ルールやマニュアルを整備し、継続的な改善が可能な体制づくりを支援します。</p>
-      </div>
-
-    </div>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- 提供内容（4ブロック） -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>EXPAND が提供すること</h2>
-
-    <div class="service-cards">
-
-      <div class="card">
-        <h3>1. 全体業務フロー図の作成・可視化</h3>
-        <p>部門ごとに分断されていた業務を一枚のフロー図に整理し、業務全体の見える化を行います。</p>
-      </div>
-
-      <div class="card">
-        <h3>2. 標準業務プロセス設計とマニュアル化</h3>
-        <p>担当者依存の業務を標準化し、誰でも同じ手順で進められる状態をつくります。</p>
-      </div>
-
-      <div class="card">
-        <h3>3. ツール棚卸し・連携設計・自動化</h3>
-        <p>既存ツールの統合・自動化ポイントを整理し、手作業を減らして生産性を向上させます。</p>
-      </div>
-
-      <div class="card">
-        <h3>4. DXロードマップ・推進体制の構築</h3>
-        <p>短期〜中期の優先プロジェクトを整理し、継続的な改善ができる体制を作ります。</p>
-      </div>
-
-    </div>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- 導入後イメージ -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>業務設計・DX推進後のイメージ</h2>
-
-    <h3>全体業務フロー図</h3>
-    <p>部門ごとにバラバラだった業務が一枚のフロー図に整理され、ボトルネックが可視化されます。</p>
-
-    <hr>
-
-    <h3>標準業務マニュアル</h3>
-    <p>「暗黙知」を言語化し、誰でも同じ品質で作業できる状態をつくります。</p>
-
-    <hr>
-
-    <h3>ツール連携・自動化</h3>
-    <p>既存のSaaSや社内システムを整理し、自動化できるポイントを設計します。</p>
-
-    <p class="note">
-      ※ 実際の内容は御社環境に合わせて個別に設計します。<br>
-      RPA・SaaS・社内システムなど、既存資産を活かして支援します。
-    </p>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- 導入ステップまとめ -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>導入ステップ</h2>
-
-    <ol class="service-ol">
-      <li>現状ヒアリング（課題・体制・ツール環境の把握）</li>
-      <li>業務フロー図・担当者マップ・利用ツール一覧の作成</li>
-      <li>改善方針・DXロードマップの策定</li>
-      <li>プロセス改善・自動化・ツール連携の実行</li>
-      <li>ルール整備・教育・マニュアル作成</li>
-      <li>改善の継続サイクル構築</li>
-    </ol>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- 導入後の効果 -->
-  <!-- ============================== -->
-  <section class="service-block">
-    <h2>導入後に期待できること</h2>
-
-    <ul class="service-list">
-      <li>業務全体の流れが可視化され、ムダが明確になる</li>
-      <li>属人化が解消され、担当者が変わっても業務が止まりにくくなる</li>
-      <li>手作業・二重入力が減り、生産性が向上する</li>
-      <li>導入したツールが業務フローと結びつき、定着しやすくなる</li>
-      <li>DX推進が“一度きり”ではなく、改善の仕組みとして継続する</li>
-    </ul>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- サービス切替ナビ -->
-  <!-- ============================== -->
-  <section class="service-nav">
-    <ul>
-      <li><a href="/service-crm.html">営業支援・CRM / MA構築</a></li>
-      <li class="active"><a href="/service-dx.html">業務設計・DX推進</a></li>
-      <li><a href="/service-education.html">教育・人材育成プログラム</a></li>
-      <li><a href="/service-web.html">Web制作・マーケティング支援</a></li>
-    </ul>
-  </section>
-
-
-  <!-- ============================== -->
-  <!-- CTA -->
-  <!-- ============================== -->
-  <section class="cta">
-    <p>まずは現在の業務フローや課題について、お気軽にご相談ください。</p>
-    <a href="/contact" class="btn-primary">無料相談を申し込む</a>
-  </section>
-
-</div>
-  
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="foot-brand">
-       <!--
+        <!--
         <img src="assets/logo.png" alt="" class="logo small">
         <span>EXPAND Co., Ltd.</span>
         -->
@@ -259,3 +291,4 @@
   </footer>
 </body>
 </html>
+
