--- a/service-education.html
+++ b/service-education.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>教育・人材育成プログラム | 株式会社EXPAND</title>
-  <meta name="description" content="教育・人材育成プログラムのご紹介。オンボーディング設計から研修、1on1の仕組みづくりまで、自走する組織づくりを支援します。"> 
+  <meta name="description" content="教育・人材育成プログラムのご紹介。現場で成果につながる営業教育・DXリテラシー向上・マネジメント研修などを、実務に即した形で設計・伴走支援します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
- <meta property="og:title" content="教育・人材育成プログラム | 株式会社EXPAND">
- <meta property="og:description" content="人材が育ち続ける教育体系と育成の仕組みづくりで、離職防止と組織力向上をサポートします。">  
+  <meta property="og:title" content="教育・人材育成プログラム | 株式会社EXPAND">
+  <meta property="og:description" content="現場で実際に使えるスキルと仕組みづくりにこだわった、人材育成・研修プログラムをご提供します。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -16,7 +16,7 @@
   <header class="site-header">
     <a class="brand" href="index.html">
       <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
-     <!--
+      <!--
       <span class="brand-text">EXPAND</span>
       -->
     </a>
@@ -27,102 +27,257 @@
     </nav>
   </header>
 
-<main>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-inner">
-      <h1>教育・人材育成プログラム</h1>
-      <p class="lead">
-        「人は採用して終わり」ではなく、<br>
-        入社後に育ち続けるための仕組みを一緒につくります。
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>教育・人材育成プログラム</h1>
+        <p class="lead">
+          「学んで終わり」ではなく、<br>
+          現場で成果につながるスキルと仕組みを育てる教育・人材育成プログラムをご提供します。
+        </p>
+      </div>
+    </section>
+
+    <!-- 課題セクション -->
+    <section class="section">
+      <h2>こんな課題はありませんか？</h2>
+      <ul>
+        <li>属人化したやり方が引き継がれ、体系立った教育ができていない</li>
+        <li>新人・中途の立ち上がりに時間がかかり、現場のOJT負荷が高い</li>
+        <li>営業・CS・バックオフィスなど、部門ごとに教育の質や内容にバラつきがある</li>
+        <li>研修を実施しても、現場での行動や数字の変化につながらない</li>
+        <li>管理職・リーダー層の育成が後回しになり、マネジメントに課題を感じている</li>
+      </ul>
+    </section>
+
+    <section class="compare">
+      <h2>導入前と導入後のイメージ</h2>
+
+      <div class="compare-inner">
+
+        <!-- Before -->
+        <div class="compare-block compare-before">
+          <div class="compare-label">Before（導入前のよくある状態）</div>
+          <ul>
+            <li>
+              <strong>教育が「属人OJT」頼み</strong><br>
+              ベテランの教え方に依存し、人によって伝える内容や質がバラバラ。
+            </li>
+            <li>
+              <strong>研修と現場がつながらない</strong><br>
+              研修で習ったことが日々の業務に落とし込まれず、「いい話」で終わってしまう。
+            </li>
+            <li>
+              <strong>評価と育成が分断されている</strong><br>
+              何をできるようになってほしいのか、評価軸と教育内容が一致していない。
+            </li>
+            <li>
+              <strong>マネージャーも“自己流”マネジメント</strong><br>
+              育成・目標設定・フィードバックのやり方が分からず、場当たり的な対応になりがち。
+            </li>
+          </ul>
+        </div>
+
+        <!-- After -->
+        <div class="compare-block compare-after">
+          <div class="compare-label after">After（EXPAND支援後のイメージ）</div>
+          <ul>
+            <li>
+              <strong>育成の「型」ができる</strong><br>
+              役割ごとに必要なスキルと教育プランが整理され、誰が教えても一定のレベルに育てられる。
+            </li>
+            <li>
+              <strong>研修が現場の行動に直結</strong><br>
+              実務に即したワークや課題設定により、「明日から何を変すべきか」が明確になる。
+            </li>
+            <li>
+              <strong>評価と育成がひとつの線でつながる</strong><br>
+              求める行動・成果と教育内容が連動し、人材育成が経営目標の達成に直結する。
+            </li>
+            <li>
+              <strong>マネージャーが育成の主役になる</strong><br>
+              面談・フィードバック・目標設定のやり方が整い、「育てるマネジメント」が機能し始める。
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="process-flow">
+      <h2>ご支援の流れ</h2>
+
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-number">STEP 1</div>
+          <h3>現状ヒアリング・課題整理</h3>
+          <p>
+            経営層・現場・人事の視点から、<br>
+            現在の教育体制・OJTの実態・評価制度などをヒアリングし、課題を整理します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 2</div>
+          <h3>育成ターゲットとゴール設定</h3>
+          <p>
+            「どの層を」「どのレベルまで」育成したいのかを明確にし、<br>
+            役割ごとのスキル定義とゴールイメージを言語化します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 3</div>
+          <h3>育成プログラム設計</h3>
+          <p>
+            研修・ワーク・OJT・振り返りなどを組み合わせ、<br>
+            現場で使える形の育成プログラムとカリキュラムを設計します。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 4</div>
+          <h3>研修実施・OJT支援</h3>
+          <p>
+            オンライン／対面での研修実施に加え、<br>
+            現場でのOJTが回りやすくなるためのツール・シート類の整備を行います。
+          </p>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">STEP 5</div>
+          <h3>振り返り・定着支援</h3>
+          <p>
+            研修後の行動変容・数字の変化を確認し、<br>
+            改善点の洗い出しと、次回以降のアップデートまで伴走します。
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- 解決策セクション -->
+    <section class="section">
+      <h2>EXPAND が提供すること</h2>
+
+      <h3>1. 役割別スキル定義・育成マップの作成</h3>
+      <p>
+        営業・CS・バックオフィス・マネージャーなど、役割ごとに求められるスキルを整理し、<br>
+        「何ができれば一人前か」を示す育成マップを作成します。
       </p>
-    </div>
-  </section>
 
-  <!-- 課題 -->
-  <section class="section">
-    <h2>こんな課題はありませんか？</h2>
-    <ul>
-      <li>新人がなかなか戦力化せず、現場メンバーの負担が増えている</li>
-      <li>教育が属人的で、教える人によって品質やスピードがバラバラ</li>
-      <li>研修を行っても「やりっぱなし」で、現場で活かされていない</li>
-      <li>評価・フィードバックの基準があいまいで、メンバーの納得感が低い</li>
-      <li>マネージャーが日々の業務に追われ、育成に時間を割けていない</li>
-    </ul>
-  </section>
+      <h3>2. 実務直結型の研修・トレーニング設計</h3>
+      <p>
+        現場で実際に使われている資料・トーク・ツールなどをベースに、<br>
+        ロールプレイやケーススタディなどの実践的な研修コンテンツを設計します。
+      </p>
 
-  <!-- 解決策 -->
-  <section class="section">
-    <h2>EXPAND がご支援できること</h2>
+      <h3>3. マネージャー・リーダー向け育成支援</h3>
+      <p>
+        1on1・フィードバック・目標設定・評価面談など、<br>
+        マネジメントに必要な「育てる技術」を習得するためのプログラムをご提供します。
+      </p>
 
-    <h3>1. 教育体系・カリキュラムの設計</h3>
-    <p>
-      「どのポジションの人に、どの段階で、何を身につけてもらうか」を整理し、<br>
-      一貫性のある教育体系とカリキュラムを作成します。
-    </p>
+      <h3>4. 評価制度との連動・定着の仕組みづくり</h3>
+      <p>
+        教育内容と評価項目がバラバラにならないよう、<br>
+        行動目標・評価基準との紐付けや、定期的な振り返りの場づくりまで支援します。
+      </p>
+    </section>
 
-    <h3>2. オンボーディング（立ち上がり支援）の仕組み化</h3>
-    <p>
-      入社～3ヶ月・6ヶ月など、期間ごとの到達イメージを言語化し、<br>
-      OJT・OFF-JT を組み合わせたオンボーディングプランを設計します。
-    </p>
+    <section class="crm-layout">
+      <h2>教育・人材育成プログラム導入後のイメージ</h2>
 
-    <h3>3. 研修・ワークショップの企画・実施</h3>
-    <p>
-      営業スキル、コミュニケーション、マネジメント基礎など、<br>
-      御社の課題に合わせた研修プログラムをオーダーメイドで設計します。
-    </p>
+      <div class="crm-grid">
+        <div class="crm-card">
+          <h3>育成マップ・スキルシート</h3>
+          <p>
+            役割ごとに求められるスキルが一覧化され、<br>
+            現状レベルと目標レベルのギャップがひと目で分かるようになります。
+          </p>
+          <ul class="crm-ui">
+            <li class="bar"></li>
+            <li class="bar short"></li>
+            <li class="bar"></li>
+          </ul>
+        </div>
 
-    <h3>4. 1on1 とフィードバックの仕組みづくり</h3>
-    <p>
-      「個人の成長」と「組織の目標」を結びつける1on1の進め方・シート類を整備し、<br>
-      マネージャーが育成しやすい環境を整えます。
-    </p>
-  </section>
+        <div class="crm-card">
+          <h3>研修・OJTプログラムの台本</h3>
+          <p>
+            研修テーマ・内容・ワーク・宿題などが整理され、<br>
+            誰が担当しても一定品質で教育できる「台本」が残ります。
+          </p>
+          <ul class="crm-ui columns">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
 
-  <!-- ステップ -->
-  <section class="section">
-    <h2>ご支援の流れ</h2>
-    <ol>
-      <li>現状の育成状況・離職状況・組織課題のヒアリング</li>
-      <li>教育課題の整理と優先順位付け</li>
-      <li>教育体系・オンボーディングプランの設計</li>
-      <li>研修・ワークショップの実施（必要に応じて）</li>
-      <li>1on1・評価の仕組みづくり支援</li>
-      <li>運用フォロー・改善提案</li>
-    </ol>
-  </section>
+        <div class="crm-card">
+          <h3>面談・フィードバックのフレーム</h3>
+          <p>
+            1on1や評価面談で使える質問集・シート類が整備され、<br>
+            マネージャーが「育成の場」を持ちやすくなります。
+          </p>
+          <ul class="crm-ui">
+            <li class="line"></li>
+            <li class="line"></li>
+            <li class="line"></li>
+          </ul>
+        </div>
+      </div>
 
-  <!-- 効果 -->
-  <section class="section">
-    <h2>期待できる効果</h2>
-    <ul>
-      <li>新入社員・中途社員の立ち上がりが早くなる</li>
-      <li>「誰が教えても同じレベル」に近づき、教育の属人化が減る</li>
-      <li>学びが現場の行動変化につながる</li>
-      <li>メンバーのキャリアイメージが明確になり、エンゲージメントが高まる</li>
-      <li>離職率の低下・採用コストの削減につながる</li>
-    </ul>
-  </section>
+      <p class="crm-note">
+        ※ 対象職種・人数・期間などに応じて、個別にプログラムを設計します。<br>
+        オンライン／対面・ワークショップ形式など、柔軟に対応可能です。
+      </p>
+    </section>
 
-  <nav class="service-nav">
-  <a href="service-crm.html">営業支援・CRM / MA構築</a>
-  <a href="service-dx.html">業務設計・DX推進</a>
-  <a href="service-education.html" class="active">教育・人材育成プログラム</a>
-  <a href="service-web.html">Web制作・マーケティング支援</a>
-　</nav>
+    <!-- 導入ステップ -->
+    <section class="section">
+      <h2>導入ステップ</h2>
+      <ol>
+        <li>現状ヒアリング（組織状況・教育体制・評価制度などの把握）</li>
+        <li>育成ターゲット・ゴールの設定（対象層・役割・スキル定義）</li>
+        <li>育成プログラム・研修コンテンツの設計</li>
+        <li>研修実施・OJT支援・各種シート類の導入</li>
+        <li>効果測定・振り返り・プログラムの改善</li>
+        <li>継続的な育成サイクル・内製化の支援</li>
+      </ol>
+    </section>
 
-  <!-- CTA -->
-  <section class="cta">
-    <p>人材育成やオンボーディングについてのご相談は、オンラインにてお受けしています。</p>
-    <a href="contact.html" class="btn">人材育成について相談する</a>
-  </section>
-</main>
+    <!-- 効果セクション -->
+    <section class="section">
+      <h2>導入後に期待できること</h2>
+      <ul>
+        <li>教育内容と評価基準が整理され、「何をできるようになれば良いか」が明確になる</li>
+        <li>新人・中途の立ち上がりが早まり、現場OJTの負荷が下がる</li>
+        <li>研修が「やりっぱなし」ではなく、行動や数字の変化に結びつくようになる</li>
+        <li>マネージャー・リーダーが育成の主役となり、組織として人を育てる文化が根づく</li>
+        <li>人材育成が、売上・生産性・顧客満足などの経営指標と直結していく</li>
+      </ul>
+    </section>
+
+    <nav class="service-nav">
+      <a href="service-crm.html">営業支援・CRM / MA構築</a>
+      <a href="service-dx.html">業務設計・DX推進</a>
+      <a href="service-education.html" class="active">教育・人材育成プログラム</a>
+      <a href="service-web.html">Web制作・マーケティング支援</a>
+    </nav>
+
+    <!-- CTA -->
+    <section class="cta">
+      <p>自社の課題やステージに合わせた、人材育成プログラムについてご相談いただけます。</p>
+      <a href="contact.html" class="btn">無料相談を申し込む</a>
+    </section>
+  </main>
 
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="foot-brand">
-       <!--
+        <!--
         <img src="assets/logo.png" alt="" class="logo small">
         <span>EXPAND Co., Ltd.</span>
         -->
